--- a/PasswordManager.csproj
+++ b/PasswordManager.csproj
@@ -20,5 +20,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
   </ItemGroup>
 </Project>
